--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "jquery": "~2.1.3",
     "threejs": "*",
-    "threex.domevents": "*"
+    "threex.domevents": "*",
+    "tweenjs": "*"
   }
 }
