--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "jquery": "~2.1.3",
     "threejs": "*",
     "threex.domevents": "*",
-    "tweenjs": "*"
+    "tweenjs": "*",
+    "lodash": "~3.5.0"
   }
 }
