--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "3Datajs",
-  "version": "0.0.0",
+  "name": "3datajs",
+  "version": "0.1.0",
   "homepage": "https://github.com/edean11/3Datajs",
   "authors": [
-    "thedean11 <edean1010@gmail.com>"
+    "Ed Dean <edean1010@gmail.com>"
   ],
   "license": "MIT",
   "ignore": [
@@ -16,8 +16,6 @@
   "dependencies": {
     "jquery": "~2.1.3",
     "threejs": "*",
-    "threex.domevents": "*",
-    "tweenjs": "*",
     "lodash": "~3.5.0"
   }
 }
